# ket-book

./: .buildinfo  .gitignore  .gitlab-ci.yml  002-complexos.html  01-index.html  02-pytutorial.html  03-algebra.html  03-complexos.html  04-algebra.html  04-postulados.html  05-computacao_classica.html  05-postulados.html  06-computacao_classica.html  06-computacao_quantica.html  07-computacao_quantica.html  07-kettutorial.html  08-algoritmos.html  08-kettutorial.html  09-algoritmos.html  09-referencias.html  10-avancados.html  10-referencias.html  100-agradecimentos.html  100-referencias.html  CNAME  README.md  algebra.html  algoritmos.html  computacao_classica_quantica.html  genindex.html  index.html  kettutorial.html  objects.inv  panorama.html  postulados.html  publish.sh  pyproject.toml  pytutorial.html  referencias.html  requirements.txt  (+2 more)
TCC LaTeX/: livro_CQ.aux  livro_CQ.bbl  livro_CQ.blg  livro_CQ.dvi  livro_CQ.out  livro_CQ.tex  livro_CQ.tex.backup  livro_CQ.toc
_sources/: 002-complexos.md  01-index.md  02-pytutorial.ipynb  03-algebra.md  03-complexos.md  04-algebra.md  05-computacao_classica.md  05-postulados.ipynb  07-computacao_quantica.md  07-kettutorial.ipynb  08-algoritmos.md  08-kettutorial.ipynb  09-algoritmos.md  10-avancados.md  100-agradecimentos.md  algebra.md  computacao_classica_quantica.ipynb  index.md  kettutorial.ipynb  panorama.md  postulados.ipynb  pytutorial.ipynb
_static/: documentation_options.js
a_images/: 100-agradecimentos.html
algebra/: 03_1-basicos.html  03_2-transformacoes.html  03_3-operadores.html  03_4-prod_tensorial.html  (+4 more)
(+299 files in other folders)
